rules/load-balancing-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-boot-istio-routing-service
spec:
  host: spring-boot-istio-routing-service
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: a
    labels:
      version: a
  - name: b
    labels:
      version: b
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-istio-routing-service
spec:
  hosts:
  - spring-boot-istio-routing-service
  http:
  - route:
    - destination:
        host: spring-boot-istio-routing-service
        subset: b
      weight: 80
    - destination:
        host: spring-boot-istio-routing-service
        subset: a
      weight: 20
